--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/icons/flavicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CAKEWAI - Làm Bạn Với AI</title>
+    <title>DOLCILUXE - Thương hiệu bánh ngọt cao cấp</title>
   </head>
   <body>
     <div id="root"></div>
